--- a/Civ209/src/MainWindow.fxml
+++ b/Civ209/src/MainWindow.fxml
@@ -3,9 +3,18 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox fx:controller="MainWindow" xmlns:fx="http://javafx.com/fxml"  stylesheets="@MainWindow.css"
-    spacing="10" prefHeight="400" prefWidth="250">
+<VBox fx:controller="MainWindow" xmlns:fx="http://javafx.com/fxml" stylesheets="@MainWindow.css" spacing="10" prefHeight="400" prefWidth="400">
+    
+    <HBox>
+        <Label fx:id = "lblGameTitle" text = "Civilization 209"></Label>
+    </HBox>
+    <HBox>
+        <Button onAction="#onPlayClicked" text="Play" />
 
-    <Button onAction="#onGreetClicked" text="Greet"  />
+    </HBox>
+    <HBox>
+        <Button onAction = "#onScoresClicked" text = "High Scores"/>
+    </HBox>
+
 
 </VBox>
