--- a/Civ209/src/HighScores.fxml
+++ b/Civ209/src/HighScores.fxml
@@ -3,10 +3,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <!-- change the fx controller to fix recursion-->
-<VBox fx:controller="MainWindow" xmlns:fx="http://javafx.com/fxml" stylesheets="@MainWindow.css" spacing="10" prefHeight="500" prefWidth="500">
-    <Label text = "High Scores"/>
-    <Label fx:id="lblScore1" text="Score 1" />
-    <Label fx:id="lblScore1" text="Score 2" />
-    <Label fx:id="lblScore1" text="Score 3" />
+<VBox fx:controller="HighScores" xmlns:fx="http://javafx.com/fxml" stylesheets="@MainWindow.css" spacing="20" prefHeight="500" prefWidth="500">
+    <Label fx:id = "lblHScoreTitle" text = "High Scores"/>
+    <VBox fx:id = "VBoxScores" spacing = "20">
+    </VBox>
 
 </VBox>
