--- a/Civ209/src/MainWindow.css
+++ b/Civ209/src/MainWindow.css
@@ -1,12 +1,12 @@
 .root {
-    -fx-padding: 10; /* Add a small padding around the window */
-    -fx-font-family: 'Times New Roman', Arial, sans-serif;
+    -fx-padding: 35; /* Add a small padding around the window */
+    -fx-font-family: 'Helvetica', Arial, sans-serif;
 
 }
 
 /* for Macs */
 .dialog-pane  {
-    -fx-font-family: 'Times New Roman', Arial, sans-serif;
+    -fx-font-family: 'Helvetica', Arial, sans-serif;
 }
 
 .selected {
