--- a/Civ209/src/HighScores.css
+++ b/Civ209/src/HighScores.css
@@ -1,5 +1,5 @@
 .root {
-    -fx-padding: 35; /* Add a small padding around the window */
+    -fx-padding: 25; /* Add a small padding around the window */
     -fx-font-family: 'Helvetica', Arial, sans-serif;
     -fx-font-size: 15;
 
@@ -13,7 +13,10 @@
 .selected {
     -fx-effect: dropshadow(three-pass-box, rgba(255,0,0,0.8), 10, 0, 0, 0);
  }
-/* 
+
  VBox {
     -fx-alignment: center;
-} */
+}
+HBox {
+    -fx-alignment: center;
+}
