--- a/Civ209/src/MainWindow.fxml
+++ b/Civ209/src/MainWindow.fxml
@@ -9,12 +9,9 @@
         <Label fx:id="lblGameTitle" text="Civilization 209"></Label>
     </HBox>
 
-    <HBox>
-        <Button onAction="#onPlayClicked" text="Play" />
-    </HBox>
-
-    <HBox>
-        <Button onAction="#onLoadClicked" text="Load Saved Game" />
+    <HBox spacing="20">
+        <Button onAction="#onHelpClicked" text="Help"></Button>
+        <Button onAction="#onAboutClicked" text="About"></Button>
     </HBox>
 
     <HBox>
@@ -29,5 +26,8 @@
     <Label text="Difficulty Level"></Label>
     <Slider fx:id="slDifficulty" min="1" max="3" showTickMarks="true" showTickLabels="true" minorTickCount="0" majorTickUnit="1" snapToTicks="true" />
 
+    <HBox spacing="20">
+        <Button onAction = "#onLevelsClicked" text= "Select Level"></Button>
+    </HBox>
 
 </VBox>
