--- a/Civ209/src/MainWindow.fxml
+++ b/Civ209/src/MainWindow.fxml
@@ -27,7 +27,8 @@
     <Slider fx:id="slDifficulty" min="1" max="3" showTickMarks="true" showTickLabels="true" minorTickCount="0" majorTickUnit="1" snapToTicks="true" />
 
     <HBox spacing="20">
-        <Button onAction = "#onLevelsClicked" text= "Select Level"></Button>
+        <Button onAction="#onPlayClicked" text="Play" />
+        <Button onAction="#onLevelsClicked" text="Select Level"></Button>
     </HBox>
 
 </VBox>
