added basic end game functionallity, worked on bugs.

--- a/Civ209/src/MainWindow.fxml
+++ b/Civ209/src/MainWindow.fxml
@@ -25,7 +25,7 @@
     </HBox>
 
     <HBox spacing="20">
-        <Button onAction="#onPlayClicked" text="Play" />
+        <!-- <Button onAction="#onPlayClicked" text="Play" /> -->
         <Button onAction="#onLevelsClicked" text="Select Level"></Button>
     </HBox>
 
