--- a/Civ209/src/Levels.fxml
+++ b/Civ209/src/Levels.fxml
@@ -4,9 +4,8 @@
 <?import javafx.scene.layout.*?>
 <VBox fx:controller="Levels" xmlns:fx="http://javafx.com/fxml" stylesheets="@HighScores.css" spacing="20" prefHeight="500" prefWidth="500">
     <Label fx:id="lblLevelTitle" text="Select A Level" />
-    <Label text="LEVELS"></Label>
     <Button onAction="#onCampaignClicked" text="Journey through the Four Seasons"></Button>
-    <Label text="Season Levels"></Label>
+    <Label styleClass = "heading" text="Season Levels"></Label>
     <HBox spacing="20">
         <Button onAction="#onSpringClicked" text="Spring"></Button>
         <Button onAction="#onSummerClicked" text="Summer"></Button>
