--- a/Civ209/src/Levels.fxml
+++ b/Civ209/src/Levels.fxml
@@ -14,5 +14,9 @@
     </HBox>
     <Button onAction="#onLoadClicked" text="Load Saved Game" />
     <Button fx:id="btnBuilt" onAction="#onPlayClicked" text="Play Built Game" />
-
+    <HBox>
+        <Button fx:id="btnEasy" onAction="#onEasyClicked" text="Easy" />
+        <Button fx:id="btnMedium" onAction="#onMediumClicked" text="Medium" />
+        <Button fx:id="btnHard" onAction="#onHardClicked" text="Hard" />
+    </HBox>
 </VBox>
