--- a/Civ209/src/GameWindow.fxml
+++ b/Civ209/src/GameWindow.fxml
@@ -7,7 +7,7 @@
 <VBox fx:id="vbox" alignment="CENTER" spacing="10" stylesheets="@GameWindow.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.2-internal" fx:controller="GameWindow">
     <HBox spacing="10">
         <HBox fx:id="displayBox" alignment="top_left" spacing="10" stylesheets="@MainWindow.css"></HBox>
-        <Button text="Enable Cheat Mode" alignment="center" stylesheets="@MainWindow.css" onAction="#onCheatClicked" />
+        <Button styleClass = "greyButton" text="Enable Cheat Mode" alignment="center" stylesheets="@MainWindow.css" onAction="#onCheatClicked" />
         <HBox fx:id="cheatControls"></HBox>
     </HBox>
     <HBox spacing="10">
@@ -18,16 +18,16 @@
     <HBox fx:id="controls" spacing="30">
 
         <HBox spacing="30">
-            <Button text="Save" onAction="#onSaveClicked" />
+            <Button styleClass = "greyButton" text="Save" onAction="#onSaveClicked" />
             <!-- <Button text="Load" onAction="#onLoadClicked" /> -->
             <VBox>
                 <Slider fx:id="slider" min="1" max="100" majorTickUnit="1.0" minorTickCount="0" snapToTicks="true" value="50" />
                 <Label fx:id="lblSize" text="${slider.value}" />
                 <Label text="Difficulty Level"></Label>
                 <HBox>
-                    <Button fx:id="btnEasy" onAction="#onEasyClicked" text="Easy" />
-                    <Button fx:id="btnMedium" onAction="#onMediumClicked" text="Medium" />
-                    <Button fx:id="btnHard" onAction="#onHardClicked" text="Hard" />
+                    <Button styleClass = "greyButton" fx:id="btnEasy" onAction="#onEasyClicked" text="Easy" />
+                    <Button styleClass = "greyButton" fx:id="btnMedium" onAction="#onMediumClicked" text="Medium" />
+                    <Button styleClass = "greyButton" fx:id="btnHard" onAction="#onHardClicked" text="Hard" />
                 </HBox>
 
             </VBox>
