--- a/Civ209/src/Levels.fxml
+++ b/Civ209/src/Levels.fxml
@@ -4,15 +4,15 @@
 <?import javafx.scene.layout.*?>
 <VBox fx:controller="Levels" xmlns:fx="http://javafx.com/fxml" stylesheets="@HighScores.css" spacing="20" prefHeight="500" prefWidth="500">
     <Label fx:id="lblLevelTitle" text="Select A Level" />
-    <Button onAction="#onCampaignClicked" text="Journey through the Four Seasons"></Button>
+    <Button styleClass = "greyButton" onAction="#onCampaignClicked" text="Journey through the Four Seasons"></Button>
     <Label styleClass = "heading" text="Season Levels"></Label>
     <HBox spacing="20">
-        <Button onAction="#onSpringClicked" text="Spring"></Button>
-        <Button onAction="#onSummerClicked" text="Summer"></Button>
-        <Button onAction="#onFallClicked" text="Fall"></Button>
-        <Button onAction="#onWinterClicked" text="Winter"></Button>
+        <Button styleClass = "greyButton" onAction="#onSpringClicked" text="Spring"></Button>
+        <Button styleClass = "greyButton" onAction="#onSummerClicked" text="Summer"></Button>
+        <Button styleClass = "greyButton" onAction="#onFallClicked" text="Fall"></Button>
+        <Button styleClass = "greyButton" onAction="#onWinterClicked" text="Winter"></Button>
     </HBox>
-    <Button onAction="#onLoadClicked" text="Load Saved Game" />
-    <Button fx:id="btnBuilt" onAction="#onPlayClicked" text="Play Built Game" />
+    <Button onAction="#onLoadClicked" text="Load Saved Game" styleClass = "greyButton" />
+    <Button fx:id="btnBuilt" onAction="#onPlayClicked" text="Play Built Game" styleClass = "greyButton" />
 
 </VBox>
