--- a/Civ209/src/HighScores.css
+++ b/Civ209/src/HighScores.css
@@ -33,6 +33,10 @@ HBox {
     -fx-font-family: 'Impact', 'Helvetica', Arial;
     -fx-font-size: 30;
 }
+.heading2 {
+    -fx-font-family: 'Impact', 'Helvetica', Arial;
+    -fx-font-size: 20;
+}
 
 /* http://fxexperience.com/2011/12/styling-fx-buttons-with-css/ */
 .greyButton { 
